syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "validate/validate.proto";

import "model.proto";

enum ConnectMessageKind {
	CONNECT_MESSAGE_KIND_UNKNOWN = 0;
	CONNECT_MESSAGE_KIND_SYSTEM = 1;
	CONNECT_MESSAGE_KIND_USER = 2;
}

message ConnectResponse {
	int64 session_id = 1;
	ConnectMessageKind kind = 2;
	oneof union {
		UnaryCallValue unary_call = 3;
		StreamCallValue stream_call = 4;
		ErrorValue err = 9;
	}
}

message ConnectRequest {
	google.protobuf.Int64Value session_id = 1 [(validate.rules).message.required = true];
	ConnectMessageKind kind = 2 [(validate.rules).enum.defined_only = true];
	oneof union {
		OpUnaryCallValue unary_call = 3;
		OpStreamCallValue stream_call = 4;
	}
}
